--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -32,12 +32,13 @@ jobs:
           BRANCH="sync-$(date +%Y%m%d)"
           git checkout -b $BRANCH
           git push origin $BRANCH
+          echo "BRANCH_NAME=$BRANCH" >> $GITHUB_ENV
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref_name }}
+          branch: ${{ env.BRANCH_NAME }}
           base: main
           title: "Sync from upstream ($(date +'%Y-%m-%d'))"
           body: "This PR merges updates from bsdata/wh40k-10e into 3xbun/wh40k-10e-th."
