--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -30,7 +30,14 @@ jobs:
       - name: Sync files
         run: |
           rsync -a --delete source-repo/ ./
-          rm -rf source-repo
+
+      # Clean up source repo
+      - name: Cleanup
+        run: rm -rf source-repo
+
+      # Commit if there are changes
+      - name: Commit changes
+        run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
